2008-10-21  Andrey Kiselev  <dron@ak4719.spb.edu>

	* libtiff/tif_jbig.c: Support the JBIG-KIT 2.0 (compatibility with
	the older versions retained).

2008-09-05  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffsplit.c: Use dynamically allocated array instead of static
	when constructing output file names.

2008-09-03  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffsplit.c: Get rid of unsafe strcpy()/strcat() calls when
	doing the filename/path construction.

	* tools/tiff2pdf.c: More appropriate format string in
	t2p_write_pdf_string(); avoid signed/unsigned mismatch.

	* libtiff/tif_lzw.c: Properly zero out the codetable. As per bug

	http://bugzilla.maptools.org/show_bug.cgi?id=1929

	* libtiff/tif_lzw.c: Properly zero out the string table. Fixes
	CVE-2008-2327 security issue.

2008-05-24  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_dirwrite.c: Fix potential memory leak writing large double
	tags. 

	* tif_dirread.c: Fix unchecked malloc result.

2008-01-30  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tif_fax3.c: Make find0span() and find1span() non-inline to
	make MSVC 6.0 compiler happy.

2007-11-26  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_fax3.c: fix leak of FAXCS state (per bug 1603).

2007-11-23  Andrey Kiselev  <dron@ak4719.spb.edu>

	* configure.com, libtiff/tif_vms.c: Better OpenVMS support. Patches
	from Alexey Chupahin.

2007-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_write.c: Rip out the fancy logic in TIFFAppendToStrip() for 
	establishing if an existing tile can be rewritten to the same location 
	by comparing the current size to all the other blocks in the same 
	directory.  This is dangerous in many situations and can easily 
	corrupt a file.  (observed in esoteric GDAL situation that's hard to
	document).  This change involves leaving the stripbytecount[] values 
	unaltered till TIFFAppendToStrip().  Now we only write a block back
	to the same location it used to be at if the new data is the same